--- a/scss/_contact_page.scss
+++ b/scss/_contact_page.scss
@@ -24,7 +24,7 @@
     margin-top: 4rem;
     padding-bottom: 10px;
     @media (min-width: $screen-tablet-narrow) {
-        margin-top: 9rem;
+        margin-top: 6rem;
         font-size: 2.5rem;
         letter-spacing: 0.8rem;
         padding-bottom: 34px;
