--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -29,6 +29,7 @@ li {
 h3 {
     font-size: 1.5em;
     font-weight: 500;
+    margin: 0;
 }
 
 .hero-image {
